Changed footer text

--- a/api_docs/main.js.html
+++ b/api_docs/main.js.html
@@ -247,7 +247,7 @@ const server = app.listen(3000, function() {
 
 <footer>
     <img class="logo" src="img/toast-ui.png" style="">
-    <div class="footer-text">Documentation written by Nicholas Julien</div>
+    <div class="footer-text">Documentation written by Nick Julien</div>
 </footer>
 <script>prettyPrint();</script>
 <script src="scripts/jquery.min.js"></script>
