--- a/api_docs/resources_js_client.js.html
+++ b/api_docs/resources_js_client.js.html
@@ -251,7 +251,7 @@ function addCloseButton(progress_bar_element, outer_div, user_id, temp_name) {
 
 <footer>
     <img class="logo" src="img/toast-ui.png" style="">
-    <div class="footer-text">Documentation written by Nicholas Julien</div>
+    <div class="footer-text">Documentation written by Nick Julien</div>
 </footer>
 <script>prettyPrint();</script>
 <script src="scripts/jquery.min.js"></script>
