--- a/api_docs/Scheduled.html
+++ b/api_docs/Scheduled.html
@@ -211,7 +211,7 @@
 
 <footer>
     <img class="logo" src="img/toast-ui.png" style="">
-    <div class="footer-text">Documentation written by Nicholas Julien</div>
+    <div class="footer-text">Documentation written by Nick Julien</div>
 </footer>
 <script>prettyPrint();</script>
 <script src="scripts/jquery.min.js"></script>
