--- a/api_docs/resources_js_logManager.js.html
+++ b/api_docs/resources_js_logManager.js.html
@@ -129,7 +129,7 @@ exports.Logger = Logger;
 
 <footer>
     <img class="logo" src="img/toast-ui.png" style="">
-    <div class="footer-text">Documentation written by Nicholas Julien</div>
+    <div class="footer-text">Documentation written by Nick Julien</div>
 </footer>
 <script>prettyPrint();</script>
 <script src="scripts/jquery.min.js"></script>
